--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "com.unity.package-manager-ui": "2.0.13",
+    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
